# c-_cmake_template

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: hello.h  hello2.h
src/: hello.cpp
test/: CMakeLists.txt  test_main.cpp
test/data/: test1.cpp
test/parse/: test1.cpp
